allow reflective access to java.lang in tests